--- a/app/src/main/res/layout/restart_dialog_layout.xml
+++ b/app/src/main/res/layout/restart_dialog_layout.xml
@@ -3,14 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <android.support.v7.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/permissions_pic"
         android:adjustViewBounds="true"/>
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
         android:gravity="center"
         android:text="@string/restart_mes"/>
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
