--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/my_app_bar_about"
         android:layout_width="match_parent"
         android:layout_height="160dp"
@@ -13,13 +13,13 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/my_toolbar_about"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
@@ -27,11 +27,11 @@
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -76,7 +76,7 @@
                         app:civ_border_width="2dp"
                         app:civ_border_color="#FF000000"/>
 
-                    <android.support.v7.widget.AppCompatTextView
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/text_version"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -87,7 +87,7 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_file"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -124,14 +124,14 @@
                             android:orientation="horizontal"
                             tools:ignore="PrivateResource">
 
-                            <android.support.v7.widget.AppCompatImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_margin="15dp"
                                 android:contentDescription="@string/intro"
                                 android:src="@drawable/replay_icon" />
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/text_intro"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -160,14 +160,14 @@
                             android:orientation="horizontal"
                             tools:ignore="PrivateResource">
 
-                            <android.support.v7.widget.AppCompatImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_margin="15dp"
                                 android:contentDescription="@string/code"
                                 android:src="@drawable/code_icon" />
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/text_code"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -195,14 +195,14 @@
                             android:orientation="horizontal"
                             tools:ignore="PrivateResource">
 
-                            <android.support.v7.widget.AppCompatImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_margin="15dp"
                                 android:contentDescription="@string/libs"
                                 android:src="@drawable/lib_icon" />
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/text_lib"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -215,9 +215,9 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_pers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -273,7 +273,7 @@
                             app:civ_border_width="2dp"
                             app:civ_border_color="#FF000000"/>
 
-                        <android.support.v7.widget.AppCompatTextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
@@ -298,14 +298,14 @@
                             android:orientation="horizontal"
                             tools:ignore="PrivateResource">
 
-                            <android.support.v7.widget.AppCompatImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_margin="15dp"
                                 android:contentDescription="@string/email"
                                 android:src="@drawable/email_icon" />
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/text_email"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -334,14 +334,14 @@
                             android:orientation="horizontal"
                             tools:ignore="PrivateResource">
 
-                            <android.support.v7.widget.AppCompatImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_margin="15dp"
                                 android:contentDescription="@string/git"
                                 android:src="@drawable/github_icon" />
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/text_git"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -355,10 +355,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
