--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,8 +9,8 @@
         android:id="@+id/my_app_bar_about"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:fitsSystemWindows="true"
         android:elevation="4dp"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -23,9 +23,9 @@
                 android:id="@+id/my_toolbar_about"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -51,7 +51,6 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:divider="?android:dividerHorizontal"
-                android:elevation="100dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:showDividers="middle">
@@ -65,16 +64,15 @@
                     android:orientation="horizontal"
                     tools:ignore="PrivateResource">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/app_image"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_margin="15dp"
                         android:layout_marginEnd="5dp"
                         android:src="@mipmap/ic_launcher"
-                        app:civ_border_width="2dp"
-                        app:civ_border_color="#FF000000"/>
+                        app:civ_border_color="#FF000000"
+                        app:civ_border_width="2dp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/text_version"
@@ -93,10 +91,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                android:elevation="2dp"
-                card_view:cardCornerRadius="5dp">
+                android:layout_marginEnd="0dp"
+                android:layout_marginStart="0dp"
+                android:elevation="8dp"
+                card_view:cardCornerRadius="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -190,32 +188,58 @@
 
             </androidx.cardview.widget.CardView>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:divider="?android:dividerHorizontal"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:showDividers="middle">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    tools:ignore="PrivateResource">
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/profile_image"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_margin="15dp"
+                        android:layout_marginEnd="5dp"
+                        android:src="@drawable/myprofile"
+                        app:civ_border_color="#FF000000"
+                        app:civ_border_width="2dp" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="@string/author"
+                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
             <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_pers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                android:elevation="2dp"
-                card_view:cardCornerRadius="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:divider="?android:dividerHorizontal"
-                    android:elevation="100dp"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:showDividers="middle"
-                    android:visibility="gone">
-
-                </LinearLayout>
+                android:layout_marginEnd="0dp"
+                android:layout_marginStart="0dp"
+                android:elevation="8dp"
+                card_view:cardCornerRadius="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -225,34 +249,6 @@
                     android:focusable="true"
                     android:gravity="center"
                     android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        tools:ignore="PrivateResource">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/profile_image"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:layout_margin="15dp"
-                            android:layout_marginEnd="5dp"
-                            android:src="@drawable/myprofile"
-                            app:civ_border_width="2dp"
-                            app:civ_border_color="#FF000000"/>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:text="@string/author"
-                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-                    </LinearLayout>
 
                     <com.balysv.materialripple.MaterialRippleLayout
                         android:layout_width="match_parent"
