--- a/app/src/main/res/layout/restart_dialog_layout.xml
+++ b/app/src/main/res/layout/restart_dialog_layout.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/permissions_pic"
-        android:adjustViewBounds="true"/>
+        android:adjustViewBounds="true"
+        android:src="@drawable/permissions_pic" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/restart_mes"/>
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="@string/restart_mes" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/close_mes"
-        android:background="?android:attr/selectableItemBackground"/>
+        android:background="?android:attr/selectableItemBackground"
+        android:text="@string/close_mes" />
 
 </LinearLayout>
