--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,7 +5,7 @@
 
         <Preference
             android:key="per_pref"
-            android:summary="Grant location"
+            android:summary="Grant Location"
             android:title="Location Permissions" />
 
     </PreferenceCategory>
