--- a/app/src/main/res/layout/restart_dialog_layout.xml
+++ b/app/src/main/res/layout/restart_dialog_layout.xml
@@ -23,7 +23,7 @@
         android:id="@+id/close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackground"
         android:text="@string/close_mes" />
 
 </LinearLayout>
